--- a/examples/index.pug
+++ b/examples/index.pug
@@ -2,7 +2,9 @@ title mini-parallax Library Demo
 
 link(rel="stylesheet", href="index.styl")
 
-p This is <a href="https://github.com/ko-yelie/mini-parallax" target="_blank">mini-parallax</a> Demo.
+p This is <a href="https://github.com/ko-yelie/mini-parallax">mini-parallax</a> Demo.
+p <a href="https://ko-yelie.github.io/mini-parallax/docs/">Docs</a>
+p Scroll down.
 
 //- NormalParallax
 .box.o-1.js-parallax speed: 0.1
@@ -11,7 +13,7 @@ p This is <a href="https://github.com/ko-yelie/mini-parallax" target="_blank">mi
 .box.o-4.js-parallax(data-speed="-0.1") speed: -0.1
 
 p.box.o-text.js-text-parallax
-  | If the text is in the parallax element, it will blur, 
+  | If the text is in the parallax element, it will blur,
   br
   | so set the <code>isRound</code> option to <code>true</code>.
 
